fix Send button

--- a/PartialHTMLs/allMessages.html
+++ b/PartialHTMLs/allMessages.html
@@ -3,5 +3,5 @@
 </div>
 <script id="msg-template" type="x-mustache-template">
     <strong>{{by}}: </strong>
-    <span>{{text}}</span>
+    <span>{{{text}}}</span>
 </script>
